fixing z-index in header

--- a/client/src/styles/Header.scss
+++ b/client/src/styles/Header.scss
@@ -66,6 +66,7 @@
 
         &-list__menu-list ul { 
             display: none;
+            z-index: 1;
         }
 
         &-list__menu-list--responsive ul {
